<resources>
    <string name="app_name">soundboard</string>
    <string name="barany">barany</string>
    <string name="b_ka">Béka</string>
    <string name="prrra">prrra</string>
    <string name="tfututu">tfututu</string>
    <string name="ahhaaah">fitsutsi</string>
    <string name="cover_me">cover me</string>
    <string name="m_jnkr_ft">májnkráft</string>
    <string name="praextended">ahhahhh</string>


</resources>
